--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
       <div class="wrapper">
         <div class="box box1">
           <h1>READY TO START MESSING?</h1>
-          <a href="about.html"><button id="welcome-btn" role="button">Let's Go!</button></a>
+          <a href="booking.html"><button id="welcome-btn" role="button">Let's Go!</button></a>
         </div>
       </div>
     </section>
