--- a/booking.html
+++ b/booking.html
@@ -20,7 +20,7 @@
       <label for="checkbox_toggle" class="hamburger">&#9776;</label>
       <!-- NAVIGATION MENUS -->
       <div class="menu">
-        <a href="home.html">
+        <a href="index.html">
           <li>Home</li>
         </a>
         <a href="about.html"><li>About</li></a>
@@ -40,34 +40,30 @@
       <hr />
       <li>
         <img src="images/mess1.jpg" class="gym-img" />
-        <h3>Mess 1 </h3>
+        <h3>Mess#1</h3>
         <div class="gym-det">
           <h5>Offered Daily</h5>
-          <!-- <h5>1 Hour</h5> -->
-          <h5>Starting at ₹150</h5>
+          <h5>Starting at ₹400</h5>
         </div>
         <a href="bookingpage.html"><button class="booking-btn">Book Now</button></a>
       </li>
       <hr />
       <li>
         <img src="images/mess2.jfif" class="gym-img" />
-        <h3>Mess 2 </h3>
+        <h3>Mess#2</h3>
         <div class="gym-det">
           <h5>Only Weekdays</h5>
-          <!-- <h5>1 Hour</h5> -->
-          <h5>Starting at ₹200</h5>
+          <h5>Starting at ₹300</h5>
         </div>
         <a href="bookingpage.html"><button class="booking-btn">Book Now</button></a>
       </li>
       <hr />
       <li>
         <img src="images/mess3.jfif" class="gym-img" />
-        <h3>Mess 3</h3>
+        <h3>Mess#3</h3>
         <div class="gym-det">
           <h5>Offered Daily</h5>
-          <!-- <h5>1 Hour</h5> -->
-          <h5>Starting at ₹140</h5>
-          <!-- <h5>📍   Jubilee Hills</h5> -->
+          <h5>Starting at ₹550</h5>
         </div>
         <a href="bookingpage.html">
           <button class="booking-btn">Book Now</button>
@@ -77,11 +73,10 @@
 
       <li>
         <img src="images/mess4.jfif" class="gym-img" />
-        <h3>Mess 4</h3>
+        <h3>Mess#4</h3>
         <div class="gym-det">
 
           <h5>Offered Daily</h5>
-          <!-- <h5>1 hour</h5> -->
           <h5>Starting at ₹200</h5>
         </div>
         <a href="bookingpage.html">
@@ -92,11 +87,10 @@
 
       <li>
         <img src="images/mess5.jfif" class="gym-img" />
-        <h3>Mess 5 </h3>
+        <h3>Mess#5</h3>
         <div class="gym-det">
           <h5>Offered Daily</h5>
-          <!-- <h5>1 Hour</h5> -->
-          <h5>Starting at ₹200</h5>
+          <h5>Starting at ₹600</h5>
         </div>
         <a href="bookingpage.html">
           <button class="booking-btn">Book Now</button>
@@ -106,11 +100,10 @@
 
       <li>
         <img src="images/mess6.jfif" class="gym-img" />
-        <h3>Mess 5</h3>
+        <h3>Mess#6</h3>
         <div class="gym-det">
           <h5>Offered Daily</h5>
-          <!-- <h5>1 Hour</h5> -->
-          <h5>Starting at ₹100</h5>
+          <h5>Starting at ₹300</h5>
         </div>
         <a href="bookingpage.html">
           <button class="booking-btn">Book Now</button>
